Use common UDS creation code also for tags

This gets rid of the KIO::StatJob and makes the UDS entry more
complete. Most importantly, it sets a local URL so thumbnails no longer
require a temporary copy.

BUG: 419429